# InterstellareSimulation

./: 404.html  Cargo.toml  Readme.md  index.css  index.html  tsconfig.json
Final/: Architektur.xcf  GUIOverview.drawio  SimulationAufbau.drawio  buw.css  present.html  present.md
dst/: Communication.js  DOM.js  EventBUS.js  LogSliderInput.js  Loop.js  MenuGrafics.js  SimulationGrafics.js  index.js
src/: lib.rs  main.rs  webserver.rs
src/webserver/: threadpool.rs
ts/: Communication.ts  DOM.ts  EventBUS.ts  LogSliderInput.ts  Loop.ts  MenuGrafics.ts  SimulationGrafics.ts  index.ts
