[package]
name = "interstellare_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
get_if_addrs = "0.5.3"
nalgebra = "0.32.2"
webbrowser = "0.8.9"
regex = "1.9.1"